Remove ValuesController, add Nlog.

--- a/ImagesWorkerAPI/ImagesWorkerAPI.csproj
+++ b/ImagesWorkerAPI/ImagesWorkerAPI.csproj
@@ -14,6 +14,11 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="NLog" Version="4.6.0" />
+    <PackageReference Include="NLog.Config" Version="4.6.0" />
+    <PackageReference Include="NLog.Extensions.AzureTableStorage" Version="1.2.0-rc1" />
+    <PackageReference Include="NLog.InstallNLogConfig" Version="2.0.0" />
+    <PackageReference Include="NLog.Schema" Version="4.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
