--- a/ImagesWorkerAPI/ImagesWorkerAPI.csproj
+++ b/ImagesWorkerAPI/ImagesWorkerAPI.csproj
@@ -17,10 +17,18 @@
     <PackageReference Include="NLog" Version="4.6.0" />
     <PackageReference Include="NLog.Config" Version="4.6.0" />
     <PackageReference Include="NLog.Extensions.AzureTableStorage" Version="1.2.0-rc1" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.4.0" />
     <PackageReference Include="NLog.InstallNLogConfig" Version="2.0.0" />
     <PackageReference Include="NLog.Schema" Version="4.6.0" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.8.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="C:\Users\Roman\.nuget\packages\nlog.config\4.6.0\contentFiles\any\any\NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
